--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
     padding: 0;
 }
 
+body {
+    background: linear-gradient(rgb(238, 240, 175), rgb(157, 238, 161));
+}
+
 .head_title {
     font-family: "PT-Serif";
     font-size: 38px;
@@ -101,7 +105,19 @@
 }
 
 .my_works_header {
+    font-family: "PT-Serif";
+    font-size: 32px;
+    font-weight: 800;
+    font-style: normal;
     text-align: center;
+}
+
+.noemi_link {
+    font-family: "PT-Serif";
+    font-size: 24px;
+    font-weight: 400;
+    font-style: italic;
+    text-decoration: none;
 }
 
 .noemi_text {
@@ -114,4 +130,32 @@
 .footer {
     margin-top: 30px;
     margin-bottom: 30px;
+}
+
+.contacts {
+    display: flex;
+    flex-direction: column;
+    width: 1100px;
+    margin: 0 auto;
+}
+
+.contacts_header {
+    font-family: "PT-Serif";
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.contacts_items {
+    font-family: "PT-Serif";
+    font-size: 24px;
+    font-weight: 400;
+    font-style: normal;
+    list-style-type: none;
+    margin-left: 30px;
+}
+
+.contacts_item_italic {
+    font-style: italic;
+    font-weight: 800;
 }
