--- a/style.css
+++ b/style.css
@@ -33,61 +33,78 @@
     padding: 0;
 }
 
-body {
-    background: linear-gradient(rgb(238, 240, 175), rgb(157, 238, 161));
-}
-
 .head_title {
     font-family: "PT-Serif";
     font-size: 38px;
     font-weight: bold;
     text-align: center;
-}
-
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.header_photo {
-    max-width: 350px;
-    height: 350px;
-    border: 2px solid green;
-    border-radius: 100%;
-}
-
-.header_text {
-    max-width: 750px;
-    padding-left: 30px;
-    padding-top: 30px;
-    font-family: "PT-Serif";
-    font-size: 20px;
-    font-weight: bold;
+    margin-bottom: 30px;
 }
 
 /* =========MAIN============== */
 .main {
+    max-width: 1300px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 30px;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+.my_way_header {
+    font-family: "PT-Serif";
+    font-size: 32px;
+    font-weight: 800;
+    font-style: normal;
+    text-align: center;
 }
 
-.my_person {
-    max-width: 1100px;
+.my_way_photo {
+    width: 270px;
+    height: 350px;
+    margin-right: 30px;
+    border: 4px solid rgb(11, 11, 124);
+    background-image: url(/images/My_photo.jpeg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    float: left;
+    box-sizing: border-box;
 }
 
-.my_person_text {
+.my_way_text {
     font-family: "PT-Serif";
     font-size: 24px;
     font-weight: normal;
+    text-indent: 30px;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto; 
 }
 
-.my_person_items {
+/* =======MY-SKILLS============ */
+
+.my_skills {
+    max-width: 1300px;
+    margin-top: 30px;
+}
+
+.my_skills_header {
+    font-family: "PT-Serif";
+    font-size: 32px;
+    font-weight: 800;
+    font-style: normal;
+    text-align: center;
+}
+
+.my_skills_text {
+    font-family: "PT-Serif";
+    font-size: 24px;
+    font-weight: normal;
+    text-indent: 30px;
+}
+
+.my_skills_items {
     list-style-type: disc;
-    padding-left: 30px;
+    padding-left: 60px;
     font-family: "PT-Serif";
     font-size: 24px;
     font-weight: 400;
@@ -100,7 +117,7 @@ body {
 
 /* =======MY-WORKS============ */
 .my_works {
-    max-width: 1100px;
+    max-width: 1300px;
     margin-top: 30px;
 }
 
@@ -125,6 +142,7 @@ body {
     font-size: 24px;
     font-weight: 400;
     font-style: normal;
+    text-indent: 30px;
 }
 /* ==========FOOTER=========== */
 .footer {
@@ -135,7 +153,7 @@ body {
 .contacts {
     display: flex;
     flex-direction: column;
-    width: 1100px;
+    width: 1300px;
     margin: 0 auto;
 }
 
@@ -146,13 +164,19 @@ body {
     text-align: center;
 }
 
-.contacts_items {
+.contacts_text {
     font-family: "PT-Serif";
     font-size: 24px;
     font-weight: 400;
     font-style: normal;
+    text-indent: 30px;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.contacts_items {
     list-style-type: none;
-    margin-left: 30px;
 }
 
 .contacts_item_italic {
