--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 /* ======FONT=========== */
 @font-face {
     font-family: "PT-Serif";
-    src: url(fonts/PT-Serif/PTSerif-Regular.ttf) format('truetype');
+    src: url(/fonts/PT-Serif/PTSerif-Regular.ttf) format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "PT-Serif";
-    src: url(fonts/PT-Serif/PTSerif-Italic.ttf) format('truetype');
+    src: url(/fonts/PT-Serif/PTSerif-Italic.ttf) format('truetype');
     font-weight: 400;
     font-style: italic;
 }
 
 @font-face {
     font-family: "PT-Serif";
-    src: url(fonts/PT-Serif/PTSerif-Bold.ttf) format('truetype');
+    src: url(/fonts/PT-Serif/PTSerif-Bold.ttf) format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: "PT-Serif";
-    src: url(fonts/PT-Serif/PTSerif-BoldItalic.ttf) format('truetype');
+    src: url(/fonts/PT-Serif/PTSerif-BoldItalic.ttf) format('truetype');
     font-weight: 700;
     font-style: italic;
 }
@@ -62,7 +62,7 @@
     height: 350px;
     margin-right: 30px;
     border: 4px solid rgb(11, 11, 124);
-    background-image: url(images/My_photo.jpeg);
+    background-image: url(/images/My_photo.jpeg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
