--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
     height: 350px;
     margin-right: 30px;
     border: 4px solid rgb(11, 11, 124);
-    background-image: url(images/My_photo.jpeg);
+    background-image: url(images/My_photo-min.jpeg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
