--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* ======FONT=========== */
-/* Задание шрифтов */
 @font-face {
     font-family: "PT-Serif";
     src: url(fonts/PT-Serif/PTSerif-Regular.ttf) format('truetype');
@@ -28,41 +33,63 @@
     font-style: italic;
 }
 
-/* =========HEADER=========== */
-* {
-    margin: 0;
-    padding: 0;
+/* =========VARIEBALS========= */
+
+:root {
+    --var-font-family: "PT-Serif";
 }
 
-.head_title {
-    font-family: "PT-Serif";
-    font-size: 38px;
+body {
+    font-family: var(--var-font-family);
+    font-size: 16px;
+    line-height: 1.2;
+}
+
+/* =========HEADER=========== */
+
+.header--color {
+    background-color: black;
+}
+
+.container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+
+.header__title {
+    font-family: var(--var-font-family);
+    font-size: 36px;
     font-weight: bold;
     text-align: center;
-    margin-bottom: 30px;
+    color: #FFFFFF;
 }
 
 /* =========MAIN============== */
 .main {
-    max-width: 1300px;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
     box-sizing: border-box;
 }
-.my_way_header {
-    font-family: "PT-Serif";
+
+.my-way__header {
+    font-family: var(--var-font-family);
     font-size: 32px;
     font-weight: 800;
     font-style: normal;
     text-align: center;
 }
 
-.my_way_photo {
+.my-way__header--margin-bottom {
+    margin-bottom: 20px;
+}
+
+.my-way__photo {
     width: 270px;
     height: 350px;
-    margin-right: 30px;
-    border: 4px solid rgb(11, 11, 124);
+    border: 2px solid rgb(11, 11, 124);
+    border-radius: 10px;
     background-image: url(images/My_photo-min.jpeg);
     background-repeat: no-repeat;
     background-position: center center;
@@ -71,8 +98,12 @@
     box-sizing: border-box;
 }
 
-.my_way_text {
-    font-family: "PT-Serif";
+.my-way__photo--margin-right {
+    margin-right: 30px;
+}
+
+.my-way__text {
+    font-family: var(--var-font-family);
     font-size: 24px;
     font-weight: normal;
     text-indent: 30px;
@@ -81,48 +112,141 @@
     hyphens: auto; 
 }
 
-/* =======MY-SKILLS============ */
-
-.my_skills {
-    max-width: 1300px;
-    margin-top: 30px;
+.my-way__text--margin-top {
+    margin-top: 10px;
 }
 
-.my_skills_header {
-    font-family: "PT-Serif";
+/* ========MY-SKILLS========== */
+
+.my-skills__header {
+    font-family: var(--var-font-family);
     font-size: 32px;
     font-weight: 800;
     font-style: normal;
     text-align: center;
 }
 
-.my_skills_text {
-    font-family: "PT-Serif";
+.my-skills__header--margin {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.my-skills__text{
+    font-family: var(--var-font-family);
     font-size: 24px;
     font-weight: normal;
     text-indent: 30px;
 }
 
-.my_skills_items {
-    list-style-type: disc;
-    padding-left: 60px;
-    font-family: "PT-Serif";
-    font-size: 24px;
-    font-weight: 400;
-    font-style: normal;
+.my-skills__text--margin-bottom {
+    margin-bottom: 10px;
 }
 
-.my_person_italic {
+.my-skills__items  {
+    list-style-type: disc;   
+}
+
+.my-skills__items--padding-left {
+    padding-left: 60px;
+}
+
+.my-skills__item {
+    font-family: var(--var-font-family);
+    font-size: 24px;
+    font-weight: 400;
     font-style: italic;
 }
 
+.my-skills__item--margin-top {
+    margin-top: 10px;
+}
+
 /* =======MY-WORKS============ */
-.my_works {
-    max-width: 1300px;
+
+.my-works__header {
+    font-family: var(--var-font-family);
+    font-size: 32px;
+    font-weight: 800;
+    font-style: normal;
+    text-align: center;
+}
+
+.my-works__header--margin {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.noemi {
+    display: grid;
+    gap: 30px;
+    grid-template-areas: 'bikecenter netology';
+    box-sizing: border-box;
+}
+
+.bikecenter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-area: bikecenter;
+}
+
+.netology {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-area: netology;
+}
+
+.noemi--padding {
+    padding: 30px;
+}
+
+.noemi__iframe {
+    width: 600px;
+    height: 600px;
+    border: none;
+    border-radius: 12px;
+}
+
+.noemi__blok-link--margin-top {
+    margin-top: 20px;
+}
+
+.noemi__link {
+    text-decoration: none;
+}
+
+.noemi__link--margin-top {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.noemi__btn {
+    font-family: var(--var-font-family);
+    font-size: 18px;
+    font-weight: 400;
+    font-style: italic;
+    background-color: black;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.noemi__btn--padding {
+    padding: 10px 30px;
+}
+
+.noemi__btn--hover:hover {
+    background-color: gray;
+}
+
+/* =======SERNIFICATES========= */
+.my_sertificates {
     margin-top: 30px;
 }
 
-.my_works_header {
+.sertificates_header {
     font-family: "PT-Serif";
     font-size: 32px;
     font-weight: 800;
@@ -130,20 +254,18 @@
     text-align: center;
 }
 
-.noemi_link {
-    font-family: "PT-Serif";
-    font-size: 24px;
-    font-weight: 400;
-    font-style: italic;
-    text-decoration: none;
-}
-
-.noemi_text {
+.sertificates_items {
     font-family: "PT-Serif";
     font-size: 24px;
     font-weight: 400;
     font-style: normal;
     text-indent: 30px;
+}
+
+.certificat_link {
+    font-style: italic;
+    text-decoration: none;
+    
 }
 /* ==========FOOTER=========== */
 .footer {
@@ -152,10 +274,10 @@
 }
 
 .contacts {
-    display: flex;
-    flex-direction: column;
     max-width: 1300px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .contacts_header {
