--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
 
 body {
     font-family: var(--var-font-family);
-    font-size: 16px;
+    font-size: 24px;
     line-height: 1.2;
 }
 
@@ -242,85 +242,197 @@ body {
 }
 
 /* =======SERNIFICATES========= */
-.my_sertificates {
-    margin-top: 30px;
-}
 
-.sertificates_header {
-    font-family: "PT-Serif";
+.my-sertificates__header {
+    font-family: var(--var-font-family);
     font-size: 32px;
     font-weight: 800;
     font-style: normal;
     text-align: center;
 }
 
-.sertificates_items {
-    font-family: "PT-Serif";
-    font-size: 24px;
-    font-weight: 400;
-    font-style: normal;
-    text-indent: 30px;
-}
-
-.certificat_link {
-    font-style: italic;
-    text-decoration: none;
-    
-}
-/* ==========FOOTER=========== */
-.footer {
-    margin-top: 30px;
+.my-sertificates__header--margin-bottom {
     margin-bottom: 30px;
 }
 
-.contacts {
-    max-width: 1300px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
+.my-sertificates__blocks {
+    display: grid;
+    gap: 20px 10px;
+    grid-template-areas: 'layout adaptive-layout git' 'basics-JS basics-JS-browser advanced-JS';
 }
 
-.contacts_header {
-    font-family: "PT-Serif";
+.my-sertificates__block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.my-sertificates__embet {
+    height: 300px;
+    border: none;
+    border-radius: 12px;
+}
+
+.my-sertificates__link {
+    font-family: var(--var-font-family);
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    font-style: italic;
+    text-decoration: none;
+    color: black;
+}
+
+.my-sertificates__link--hover:hover {
+    text-decoration: underline;
+}
+
+.layout {
+    grid-area: layout;
+}
+
+.adaptive-layout {
+    grid-area: adaptive-layout;
+}
+
+.grid {
+    grid-area: git;
+}
+
+.basics-JS {
+    grid-area:basics-JS;
+}
+
+.basics-JS-browser {
+    grid-area: basics-JS-browser;
+}
+
+.advanced-JS {
+    grid-area: advanced-JS;
+}
+
+/* ==========FOOTER=========== */
+.footer--color {
+    background-color: black;
+}
+
+.footer__header {
+    font-family: var(--var-font-family);
     font-size: 32px;
     font-weight: 800;
     text-align: center;
+    color: #FFFFFF;
 }
 
-.contacts_text {
-    font-family: "PT-Serif";
+.footer__header--margin-bottom {
+    margin-bottom: 20px;
+}
+
+.footer__text {
+    font-family: var(--var-font-family);
     font-size: 24px;
     font-weight: 400;
     font-style: normal;
     text-indent: 30px;
+    hyphens: auto;
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
-    hyphens: auto;
+    color: #FFFFFF;
+}
+.footer__text--margin-bottom {
+    margin-bottom: 10px;
 }
 
-.contacts_items {
+.footer__items {
     list-style-type: none;
 }
 
-.contacts_item_italic {
-    font-style: italic;
-    font-weight: 800;
+.footer__item--margin-top {
+    margin-bottom: 10px;
+}
+
+.footer__link {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.footer__link--hover:hover {
+    text-decoration: underline;
 }
 
 /* Стилизация под телефон */
 @media (max-width: 640px){
-    
-    .main {
-        padding-left: 30px;
+
+    .container {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
-    .my_way_photo {
+    .header__title {
+        font-size: 26px;
+    }
+
+    .my-way__header {
+        font-size: 24px;
+    }
+
+    .my-way__photo {
         float: none;
         margin: 0 auto;
-        margin-bottom: 30px;
     }
 
-    .footer {
-        padding-left: 30px;
+    .my-way__photo--margin-bottom {
+        margin-bottom: 20px;
+    }
+
+    .my-way__text {
+        font-size: 18px
+    }
+
+    .my-skills__header {
+        font-size: 24px;
+    }
+
+    .my-skills__text {
+        font-size: 18px
+    }
+
+    .my-skills__item {
+        font-size: 18px
+    }
+
+    .my-works__header {
+        font-size: 24px;
+    }
+
+    .noemi {
+        grid-template-areas: 'bikecenter' 'netology';
+    }
+
+    .noemi__iframe {
+        width: 100%;
+    }
+
+    .my-sertificates__header {
+        font-size: 24px;
+    }
+
+    .my-sertificates__blocks {
+        grid-template-areas: 'layout adaptive-layout' 'git basics-JS' 'basics-JS-browser advanced-JS';
+    }
+
+    .my-sertificates__embet {
+        width: 250px;
+        height: 250px;
+    }
+
+    .footer__header {
+        font-size: 22px;
+    }
+
+    .footer__text {
+        font-size: 18px;
     }
 }
