--- a/style.css
+++ b/style.css
@@ -189,7 +189,9 @@ body {
 .noemi {
     display: grid;
     gap: 30px;
-    grid-template-areas: 'bikecenter netology';
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: 'bikecenter netology' 'repair repair';
     box-sizing: border-box;
 }
 
@@ -205,6 +207,13 @@ body {
     flex-direction: column;
     align-items: center;
     grid-area: netology;
+}
+
+.repair {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    grid-area: repair;
 }
 
 .noemi--padding {
